// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card CardFooter renders correctly 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-1iuui8q-CardSection-CardFooter e1wt854s3"
  >
    Card Footer
  </div>
</div>
`;

exports[`Card CardHeader renders correctly 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-qp6nyl-CardSection-BaseCardHeader e1wt854s4"
    color="textHeading"
  >
    <div
      className="css-1ooxx62-TitleActionWrapper e1wt854s2"
    >
      <div
        className="css-1xemimu-Title e1wt854s1"
      >
        Card Title
      </div>
    </div>
  </div>
</div>
`;

exports[`Card CardHeader renders with actions 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-qp6nyl-CardSection-BaseCardHeader e1wt854s4"
    color="textHeading"
  >
    <div
      className="css-1ooxx62-TitleActionWrapper e1wt854s2"
    >
      <div
        className="css-1xemimu-Title e1wt854s1"
      >
        Card Title
      </div>
      <div>
        <span>
          Action
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Spacing allows for sub-components to pass their own size 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-1oad4pc-CardSection-setSectionSizingProp-BaseCardHeader-setHeaderSizingProp e1wt854s4"
    color="textHeading"
  >
    <div
      className="css-1ooxx62-TitleActionWrapper e1wt854s2"
    >
      <div
        className="css-1xemimu-Title e1wt854s1"
      >
        Card Title
      </div>
    </div>
  </div>
  <div
    className="css-gsg15-CardSection-setSectionSizingProp e1wt854s5"
  >
    Card Content
  </div>
  <div
    className="css-1s5z4be-CardSection-setSectionSizingProp-CardFooter-setFooterSizingProp e1wt854s3"
  >
    Card Footer
  </div>
</div>
`;

exports[`Card Spacing render a large CardHeader, Section and Footer when Card has large prop 1`] = `
<div
  className="css-38p26a-Card-setCardVariant-setCardSizingProp e1wt854s0"
>
  <div
    className="css-qp6nyl-CardSection-BaseCardHeader e1wt854s4"
    color="textHeading"
  >
    <div
      className="css-1ooxx62-TitleActionWrapper e1wt854s2"
    >
      <div
        className="css-1xemimu-Title e1wt854s1"
      >
        Card Title
      </div>
    </div>
  </div>
  <div
    className="css-qe0wre-CardSection e1wt854s5"
  >
    Card Content
  </div>
  <div
    className="css-1iuui8q-CardSection-CardFooter e1wt854s3"
  >
    Card Footer
  </div>
</div>
`;

exports[`Card Spacing render a noSpacing CardHeader, Section and Footer when Card has noSpacing prop 1`] = `
<div
  className="css-ydkywp-Card-setCardVariant-setCardSizingProp e1wt854s0"
>
  <div
    className="css-qp6nyl-CardSection-BaseCardHeader e1wt854s4"
    color="textHeading"
  >
    <div
      className="css-1ooxx62-TitleActionWrapper e1wt854s2"
    >
      <div
        className="css-1xemimu-Title e1wt854s1"
      >
        Card Title
      </div>
    </div>
  </div>
  <div
    className="css-qe0wre-CardSection e1wt854s5"
  >
    Card Content
  </div>
  <div
    className="css-1iuui8q-CardSection-CardFooter e1wt854s3"
  >
    Card Footer
  </div>
</div>
`;

exports[`Card Spacing renders a card with an optional section 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
/>
`;

exports[`Card Spacing renders section without spacing 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-1d9xmyl-CardSection-setSectionSizingProp e1wt854s5"
  >
    Card Content
  </div>
</div>
`;

exports[`Card Types renders correctly (default) 1`] = `
<div
  className="css-bj001z-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-qe0wre-CardSection e1wt854s5"
  >
    Card Content
  </div>
</div>
`;

exports[`Card Types renders correctly (top) 1`] = `
<div
  className="css-vu8hh6-Card-setCardVariant e1wt854s0"
>
  <div
    className="css-qe0wre-CardSection e1wt854s5"
  >
    Card Content
  </div>
</div>
`;
